istio/leenet-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: leenet-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
    - "leenet.link"
    - "*.leenet.link"
    port:
      number: 443
      name: leenet-link-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: leenet-route53-dns-tls
  - hosts:
    - "leenet.lol"
    - "*.leenet.lol"
    port:
      number: 443
      name: leenet-lol-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: leenet-lol-route53-dns-tls
  - hosts:
    - "charlierlee.com"
    - "*.charlierlee.com"
    port:
      number: 443
      name: charlierlee-com-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: charlierlee-com-route53-dns-tls
  - hosts:
    - "zambonigirl.com"
    - "*.zambonigirl.com"
    port:
      number: 443
      name: zambonigirl-com-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: zambonigirl-com-route53-dns-tls
  - hosts:
    - "paintedravendesign.com"
    - "*.paintedravendesign.com"
    port:
      number: 443
      name: paintedravendesign-com-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: paintedravendesign-com-route53-dns-tls
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-leenet.link
spec:
  hosts:
  - "leenet.link"
  - "www.leenet.link"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/" #or prefix
    route:
      - destination:
          host: csharpauth
          port:
            number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-charlierlee.com
spec:
  hosts:
  - "charlierlee.com"
  - "www.charlierlee.com"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/" #or prefix
    rewrite:
      uri: "/"
      authority: www.amazon.com
    route:
      - destination:
          host: www.amazon.com
          port:
            number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-summary.leenet.link
spec:
  hosts:
  - "summary.leenet.link"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
      - destination:
          host: summary
          port:
            number: 8501
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-generate.leenet.link
spec:
  hosts:
  - "generate.leenet.link"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
      - destination:
          host: generate
          port:
            number: 8502
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-blazorboilerplate.leenet.link
spec:
  hosts:
  - "blazorboilerplate.leenet.link"
  - "leenet.lol"
  - "www.leenet.lol"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
      - destination:
          host: blazorboilerplate
          port:
            number: 53415
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-zambonigirl.com
spec:
  hosts:
  - "zambonigirl.com"
  - "www.zambonigirl.com"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/" #or prefix
    route:
      - destination:
          host: zambonigirl
          port:
            number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-paintedravendesign.com
spec:
  hosts:
  - "paintedravendesign.com"
  - "www.paintedravendesign.com"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/" #or prefix
    route:
      - destination:
          host: paintedravendesign
          port:
            number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-marketcap.leenet.link
spec:
  hosts:
  - "marketcap.leenet.link"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/" #or prefix
    route:
      - destination:
          host: marketcap
          port:
            number: 80
