istio/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-charlierlee.com
spec:
  hosts:
  - "charlierlee.com"
  - "www.charlierlee.com"
  gateways:
  - istio-system/leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/" #or prefix
    rewrite:
      uri: "/"
      authority: www.amazon.com
    route:
      - destination:
          host: www.amazon.com
          port:
            number: 443
